<resources>
    <string name="app_name">THSSForum</string>

    <string name="API_BASEPATH" translatable="false">https://lab.panda2134.site:20443</string>
    <string name="WS_BASEPATH" translatable="false">wss://lab.panda2134.site:20443/notification/subscribe</string>

    <string name="OSS_ENDPOINT" translatable="false">oss-cn-beijing.aliyuncs.com</string>
    <string name="OSS_BUCKET_DOMAIN" translatable="false">thssforum.oss-cn-beijing.aliyuncs.com</string>
    <string name="OSS_BUCKET" translatable="false">thssforum</string>

    <string name="TOAST_LOGIN_SUCCESS">登录成功</string>
    <string name="TOAST_NOT_LOGGED_IN">登录过期或未登录</string>
    <string name="TOAST_PERMISSION_DENIED">没有此操作权限！</string>
    <string name="TOAST_NOTIFICATION_SERVER_NO_CONNECTION">无法连接到通知服务器</string>
    <string name="TOAST_INTERNAL_SERVER_ERROR">服务器内部错误</string>
    <string name="TOAST_UNPROCESSABLE_ENTITY">校验失败</string>
    <string name="TOAST_EMAIL_USED">此电子邮件已被注册</string>
    <string name="TOAST_WRONG_OLD_PASSWORD">旧密码错误</string>
    <string name="TOAST_CHANGE_PASSWORD_SUCCESS">密码修改成功</string>
    <string name="NO_MORE_CONTENT">没有更多内容了</string>

    <string name="GLOBAL_SHARED_PREF" translatable="false">site.panda2134.thssforum.SHARED_PREF</string>
    <string name="DRAFT_SHARED_PREF" translatable="false">site.panda2134.thssforum.DRAFT_SHARED_REF</string>
    <string name="NOTIFICATION_SHARED_PREF" translatable="false">site.panda2134.thssforum.NOTIFICATION_SHARED_PREF</string>
    <string name="PREF_KEY_TOKEN" translatable="false">token</string>
    <string name="PREF_KEY_UID" translatable="false">uid</string>
    <string name="PREF_KEY_TOKEN_EXPIRE_AT" translatable="false">tokenExpiresAt</string>
    <string name="PREF_KEY_PURE_TEXT_TITLE" translatable="false">pureTextTitle</string>
    <string name="PREF_KEY_PURE_TEXT_CONTENT" translatable="false">pureTextContent</string>
    <string name="PREF_KEY_IMAGE_TITLE" translatable="false">imageTitle</string>
    <string name="PREF_KEY_IMAGE_CONTENT" translatable="false">imageContent</string>
    <string name="PREF_KEY_IMAGE_PATH_LIST" translatable="false">imagePathList</string>
    <string name="PREF_KEY_VIDEO_TITLE" translatable="false">videoTitle</string>
    <string name="PREF_KEY_VIDEO_PATH" translatable="false">videoPath</string>
    <string name="PREF_KEY_AUDIO_TITLE" translatable="false">audioTitle</string>
    <string name="PREF_KEY_AUDIO_PATH" translatable="false">audioPath</string>
    <string name="PREF_KEY_DRAFT_SET" translatable="false">draft</string>

    <string name="RECYCLER_VIEW_NO_CONTENT">暂无内容</string>

    <string name="email">电子邮箱</string>
    <string name="password">密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="change_password">确认修改</string>
    <string name="register">注册</string>
    <string name="avatar">头像</string>
    <string name="login">登录</string>
    <string name="logout">登出</string>
    <string name="upload">上传</string>
    <string name="loading">加载中…</string>

    <string name="title_home">发现</string>
    <string name="title_post">发布</string>
    <string name="title_profile">我的</string>

    <string name="all_posts">全部动态</string>
    <string name="followed_posts">关注者动态</string>

    <string name="pure_text">纯文字</string>
    <string name="text_pic_mix">图文混合</string>
    <string name="normal">纯文字 和 图文混合</string>
    <string name="audio">音频</string>
    <string name="video">视频</string>
    <string name="all">全部</string>

    <string name="my_homepage">我的主页</string>
    <string name="drafts">草稿箱</string>
    <string name="followed_list">关注列表</string>
    <string name="edit_my_profile">修改个人信息</string>
    <string name="edit_my_password">修改密码</string>


    <string name="notify_description">来自其他用户的点赞、评论通知</string>
    <string name="menu_puretext">发布-纯文字</string>
    <string name="menu_textpicmix">发布-图文混合</string>
    <string name="menu_audio">发布-音频</string>
    <string name="menu_video">发布-视频</string>
    <string name="menu_notify_search">通知-搜索</string>

    <string name="copy_to_clipboard">复制到剪贴板</string>
    <string name="delete">删除</string>
    <string name="user_homepage">用户主页</string>
    <string name="user_name">用户名</string>
    <string name="content">内容</string>
    <string name="title_name">动态名</string>
    <string name="title_content">动态名称 或 内容</string>
    <string name="type">动态类型</string>

    <string name="likes">点赞</string>
    <string name="comments">评论</string>
    <string name="updates">关注更新</string>
    <string name="system_notify">系统通知</string>
    <string name="notify_type">通知类型</string>

    <string name="test_sentence">测试</string>
    <string name="add_location">添加定位信息</string>
    <string name="select_video">从相册选择视频</string>
    <string name="shoot_video">拍摄视频</string>
    <string name="select_picture">从相册选择照片</string>
    <string name="shoot_picture">拍摄照片</string>

    <string name="content_hint">请输入你想要发表的内容…</string>
    <string name="title_hint">请输入动态标题…</string>
    <string name="pics">图片</string>
    <string name="notify_search_hint">查询通知内容…</string>

    <string name="like_time_switch">动态展示顺序</string>
    <string name="eye_switch">屏蔽与否</string>
    <string name="search">搜索</string>
    <string name="notify">通知</string>
    <string name="nickname">昵称</string>
    <string name="intro">简介</string>
    <string name="save">保存</string>
    <string name="search_result">搜索结果</string>
    <string name="search_result_for">搜索 “%1$s” 的结果如下</string>

    <string name="followed">已关注</string>
    <string name="follow">关注</string>

    <string name="notification_channel_following_updated">关注的人更新动态</string>
    <string name="notification_channel_following_updated_description">关注的人更新动态时发送通知</string>
    <string name="notification_following_updated" formatted="true">您关注的 %1$s 发布了新动态</string>

    <string name="notification_channel_post_liked">发布的动态被点赞</string>
    <string name="notification_channel_post_liked_description">您发布的动态被点赞时发送通知</string>
    <string name="notification_post_liked" formatted="true">用户 %1$s 赞了您的动态 %2$s</string>

    <string name="notification_channel_comment_liked">发布的评论被点赞</string>
    <string name="notification_channel_comment_liked_description">您发布的评论被点赞时发送通知</string>
    <string name="notification_comment_liked" formatted="true">用户 %1$s 赞了您的评论 %2$s</string>


    <string name="notification_channel_post_commented">发布的动态被评论</string>
    <string name="notification_channel_post_commented_description">您发布的动态有新评论时发送通知</string>
    <string name="notification_post_commented" formatted="true">用户 %1$s 评论了您的动态 %2$s</string>

    <string name="notification_channel_comment_replied">发布的评论被回复</string>
    <string name="notification_channel_comment_replied_description">您发布的评论有新回复时发送通知</string>
    <string name="notification_comment_replied" formatted="true">用户 %1$s 回复了您的评论 %2$s</string>

    <string name="notification_channel_background">推送通知服务</string>
    <string name="notification_channel_background_description">此通知频道用来保证推送通知服务的正常运行。</string>
    <string name="notification_background" formatted="true">THSSForum 正在后台运行。</string>

    <string name="unknown">未知</string>
    <string name="blocked_user">已屏蔽用户</string>
    <string name="reply">回复</string>
    <string name="write_your_comment">写下您的评论</string>

    <string name="save_success">保存成功</string>
    <string name="post_success">发布成功</string>
    <string name="comment_success">评论成功</string>
    <string name="delete_success">删除成功</string>

    <string name="no_photo">还没有照片</string>
    <string name="please_shot_or_choose_a_photo">请拍摄或从相册选择一张照片👀</string>

    <string name="no_video">还没有视频</string>
    <string name="please_shot_or_choose_a_video">请拍摄或从相册选择一段视频👀</string>

    <string name="no_audio">还没有音频</string>
    <string name="please_record_or_choose_an_audio">请录制或从手机选择一段音频👀</string>

    <string name="no_title">还没有标题</string>
    <string name="please_add_a_title">请起一个标题👀</string>

    <string name="no_content">还没有内容</string>
    <string name="please_add_content">写点什么吧</string>

    <string name="uploaded_preview">上传预览</string>

    <string name="empty_title">空标题</string>
    <string name="are_you_sure_to_delete">您确定删除吗？</string>
    <string name="delete_lose_forever">选择的内容将永久删除</string>

    <string name="ok">确定</string>
    <string name="cancel">取消</string>
</resources>