<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/normal_margin"
    android:layout_marginTop="@dimen/normal_margin"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:textColor="@color/black"
        android:hint="@string/title_name"
        android:inputType="textLongMessage" />
    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:textColor="@color/black"
        android:hint="@string/user_name"
        android:inputType="textLongMessage" />
    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:textColor="@color/black"
        android:hint="@string/content"
        android:inputType="textLongMessage" />
    <TextView
        android:id="@+id/types"
        android:textSize="@dimen/types_size"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginLeft="@dimen/pic_to_text_margin"
        android:textColor="@color/types_color"
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type" />
    <RadioGroup
        android:id="@+id/rg_types"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/rb_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all" />
        <RadioButton
            android:id="@+id/rb_pure_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pure_text" />
        <RadioButton
            android:id="@+id/rb_text_pic_mix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_pic_mix" />
        <RadioButton
            android:id="@+id/rb_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audio" />
        <RadioButton
            android:id="@+id/rb_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video" />
    </RadioGroup>

</LinearLayout>