<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/my_image"
        android:layout_width="@dimen/profile_image"
        android:layout_height="@dimen/profile_image"
        android:layout_marginVertical="@dimen/medium_margin"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/drafts"
        app:srcCompat="@drawable/text_box_edit_outline"
        android:background="@color/purple_200"
        app:tint="#FFFFFF" />
    <EditText
        android:id="@+id/my_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:textColor="@color/black"
        android:hint="@string/nickname"
        android:textAlignment="center"
        android:inputType="textLongMessage" />
    <EditText
        android:id="@+id/my_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:textColor="@color/black"
        android:hint="@string/intro"
        android:textAlignment="center"
        android:inputType="textLongMessage" />
    <Button
        android:id="@+id/save_button"
        android:layout_marginTop="@dimen/small_margin"
        android:background="@color/purple_200"
        android:textColor="@color/white"
        android:text="@string/nickname"
        android:textSize="@dimen/profile_button_save_ts"
        android:layout_gravity="center"
        android:layout_width="@dimen/profile_button_save_w"
        android:layout_height="@dimen/profile_button_save_h">
    </Button>
</LinearLayout>