<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <variable
            name="p"
            type="site.panda2134.thssforum.ui.post.ActivityNewTextPicMixPost" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/medium_margin">

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:indeterminate="false"
            android:layout_marginVertical="@dimen/medium_margin"
            android:max="100"
            android:visibility="@{p.uploading ? View.VISIBLE : View.GONE}"
            android:progress="@{p.progressPercentage}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/title"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:hint="@string/title_hint"
            android:inputType="textLongMessage"
            android:textStyle="bold"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:gravity="top|start"
            android:hint="@string/content_hint"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:minLines="7"
            android:singleLine="false" />

        <Button
            android:id="@+id/add_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_location"
            style="@style/Widget.Material3.Button.IconButton"
            app:icon="@drawable/ic_baseline_add_location_24" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <cn.bingoogolapple.photopicker.widget.BGASortableNinePhotoLayout
            android:id="@+id/photo_picker"
            tools:layout_height="360dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</layout>