<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="v"
            type="site.panda2134.thssforum.ui.post.ActivityNewVideoPost" />
        <import type="android.view.View"/>
    </data>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:paddingHorizontal="@dimen/medium_margin"
        android:paddingVertical="@dimen/normal_margin"
        android:orientation="vertical">

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Headline"
            android:textStyle="bold"
            android:hint="@string/title_hint"
            android:inputType="textLongMessage"
            android:importantForAutofill="no" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                style="@style/Widget.Material3.Button.IconButton"
                android:id="@+id/add_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/add_location"
                android:layout_marginEnd="@dimen/small_margin"
                app:icon="@drawable/ic_baseline_add_location_24" />
            <LinearLayout
                android:visibility="@{v.uploading ? View.GONE : View.VISIBLE}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/select_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.Button.IconButton"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:contentDescription="@string/select_video"
                    app:icon="@drawable/ic_baseline_photo_album_24" />

                <Button
                    android:id="@+id/shoot_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@id/select_video"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/Widget.Material3.Button.IconButton"
                    app:icon="@drawable/ic_baseline_camera_24"
                    android:contentDescription="@string/shoot_video"
                    tools:layout_editor_absoluteY="659dp" />

            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="220dp">
            <ProgressBar
                android:max="100"
                android:layout_centerInParent="true"
                android:indeterminate="false"
                android:visibility="@{v.uploading ? View.VISIBLE : View.GONE}"
                android:progress="@{v.progressPercentage}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <VideoView
                android:id="@+id/videoPreview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:layout_width="200dp"
                android:layout_centerInParent="true"
                android:visibility="@{(!v.uploading &amp;&amp; v.videoPath.length() > 0) ? View.VISIBLE : View.GONE}" />
        </RelativeLayout>

        <TextView
            android:id="@+id/location"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</layout>